--- a/chat/static/index.html
+++ b/chat/static/index.html
@@ -56,7 +56,9 @@
                                         <button id="btnDevenirAnimateur" style="display: none">
                                             Devenir animateur
                                         </button>
-                                        <div class="row" id="affichageQuiz"></div>
+                                        <div class="row" id="affichageQuiz">
+                                            <div class="col" style="display: none" id="affichageCompteur"></div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
