--- a/chat/static/index.html
+++ b/chat/static/index.html
@@ -36,6 +36,9 @@
                             <li style="display: none">
                                 <span id="qpcMenu" class="clickable menu">Quiz</span>
                             </li>
+                            <li>
+                                <span id="addQuestionMenu" class="clickable menu">Ajout questions</span>
+                            </li>
                         </ul>
                         <hr>
                         <h6 class="titreMenu">Utilisateurs</h6>
@@ -92,8 +95,7 @@
                                         <div class="card-body">
                                             <div class="row">
                                                 <div class="col">
-                                                    <textarea autofocus placeholder="Taper votre message"
-                                                        class="textArea" id="message" rows="1"></textarea>
+                                                    <textarea autofocus placeholder="Taper votre message" class="textArea" id="message" rows="1"></textarea>
                                                 </div>
                                                 <div class="col-md-auto text-right">
                                                     <button id="btn-send-msg">Envoyer</button>
@@ -133,76 +135,7 @@
             </div>
         </div>
     </div>
-    <script>
-        var xhr = new XMLHttpRequest();
-        var ttQuestion = [];
-        var qpcMenu = document.getElementById('qpcMenu');
-        var chatMenu = document.getElementById('chatMenu');
-        var vueChat = document.getElementById('vueChat');
-        var vueQpc = document.getElementById('vueQpc');
-        var listUsers = document.getElementById('listUsers');
-        var btnDevenirAnimateur = document.getElementById('btnDevenirAnimateur');
-        var utilisateur = {};
-
-        qpcMenu.addEventListener('click', () => {
-            xhr.open('GET', 'question');
-            xhr.send(null);
-            xhr.addEventListener('readystatechange', function () {
-                if (xhr.readyState === 4) {
-                    let res = JSON.parse(xhr.response);
-                    if (res.response && res.response.length > 0) {
-                        ttQuestion = res.response;
-                    }
-                }
-            });
-            vueQpc.style.display = 'block';
-            vueChat.classList.add('col-md-3');
-            vueChat.classList.remove('col');
-            displayQpc = true;
-            socket.emit('checkAnimateur', (response) => { //la reponse ici va etre le retour de la callback coté serveur
-                if (!response) { //il n'y a pas d'animateur pour l'instant on peut afficher le bouton pour devenir animateur
-                    btnDevenirAnimateur.style.display = 'inline-block';
-                } else {
-                    btnDevenirAnimateur.style.display = 'none';
-                    let affQuizz = document.getElementById('affichageQuiz');
-                    affQuizz.innerHTML = `<div class="col">En attente de la prochaine question</div>`;
-                }
-            });
-        });
-
-        chatMenu.addEventListener('click', () => {
-            vueQpc.style.display = 'none';
-            vueChat.classList.remove('col-md-3');
-            vueChat.classList.add('col');
-            displayQpc = false;
-        });
-
-        socket.on('updateListUsers', (ttUtilisateur) => {
-            setTtUtilisateurHtml(ttUtilisateur)
-        });
-
-        function setTtUtilisateurHtml(ttUtilisateur) {
-            ttUtilisateur.sort((a, b) => {return a.score - b.score})
-            listUsers.innerHTML = "";
-            ttUtilisateur.forEach(function (user) {
-                var li = document.createElement('li');
-                if(user.animateur) {
-                    li.innerHTML = user.pseudo + ' (Animateur)';
-                } else {
-                    li.innerHTML = user.pseudo + ' : ' + user.score;
-                }
-                listUsers.appendChild(li);
-            });
-        }
-
-        function setQpcMenu() {
-            if (utilisateur.room || roomClicked) {
-                qpcMenu.parentElement.style.display = 'list-item';
-            } else {
-                qpcMenu.parentElement.style.display = 'none';
-            }
-        }
-    </script>
+    <script src="js/script.js"></script>
     <script src="js/chat.js"></script>
     <script src="js/qpc.js"></script>
 </body>
