--- a/chat/static/ajoutQuestion.html
+++ b/chat/static/ajoutQuestion.html
@@ -200,7 +200,10 @@
             validAnswer: btn4.classList.contains('btnValidAnswer')
         }, ];
         xhr.open('POST', 'question', true);
-        xhr.send(JSON.stringify(newQuestion));
+        xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+        xhr.send(JSON.stringify({
+            data: newQuestion
+        }));
     }
 
     function setMsgError(msg) {
